components dinamics propertys

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,12 +4,26 @@
 <app-menu-title></app-menu-title> 
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card photoCover="https://wallpapers.com/images/hd/4k-marvel-digital-cartoon-t9z4pnuivn6488jq.jpg" 
+        cardTitle="Marvel Snaps"
+        cardDescription="Marvel News"
+        >
+    </app-big-card>
+    <app-big-card photoCover="https://i.ytimg.com/vi/QUfaHAR-Nho/maxresdefault.jpg" 
+    cardTitle="Iron Man 4"
+    cardDescription="Iron Man 4 soon"
+    >
+</app-big-card>
     </div>
     <div class="articles__others">  
-        <app-small-card></app-small-card>     
-        <app-small-card></app-small-card>      
-        <app-small-card></app-small-card>      
+        <app-small-card cardTitle="Spider man and iron man "
+ photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2022/12/Homem-de-Ferro-e-Homem-Aranha.jpg"></app-small-card>  
+    
+ <app-small-card cardTitle="Black Panther 2"
+ photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQS4zwjZcK2AZCpHIEtjpDo7K8R1ek_lmlaK3hhSTTs6eBZyy2PFgx7F89zrYbKKNe_LY&usqp=CAU"></app-small-card> 
 
-    </div>
+ <app-small-card cardTitle="X-man  "
+ photoCover="https://img.olhardigital.com.br/wp-content/uploads/2022/10/x-men.jpg">
+</app-small-card>
+</div>
 </div>
