--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,14 +1,14 @@
 <div class="container__small-card">
     <div class="container__small-card-content">
     <div class="small-card__photo">
-        <img src="https://disneyplusbrasil.com.br/wp-content/uploads/2022/12/Homem-de-Ferro-e-Homem-Aranha.jpg" 
+        <img src="{{photoCover}}" 
         alt=""
         height="200px"
         width="300px"
         srcset="">
     </div>
 <div class="small-card__title">
-    <h1><a href="#">Saiu a nova  ....</a></h1>
+    <h1><a href="#">{{cardTitle}}</a></h1>
 </div>
 <div class="container__small-card-separator"><hr></div>
 </div>
